# copyright 2022-2023 alibaba group holding limited.
# 
# licensed under the apache license, version 2.0 (the "license");
# you may not use this file except in compliance with the license.
# you may obtain a copy of the license at
# 
#     http://www.apache.org/licenses/license-2.0
# 
# unless required by applicable law or agreed to in writing, software
# distributed under the license is distributed on an "as is" basis,
# without warranties or conditions of any kind, either express or implied.
# see the license for the specific language governing permissions and
# limitations under the license.

[tool.poetry]
name = "graphar-pyspark"
version = "0.0.1"
description = "PySpark bindings to GraphAr scala spark package"
authors = ["Semyon Sinchenko <ssinchenko@pm.me>"]
readme = "README.rst"
packages = [{include = "graphar_pyspark"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.spark]
optional = true

[tool.poetry.group.spark.dependencies]
pyspark = "3.2.2" # TODO: relax requirement when scala part will be available for multiple spark versions

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "*"

[tool.poetry.group.tests]
optional = true

[tool.poetry.group.tests.dependencies]
pytest = "*"
pytest-cov = "*"
pyyaml = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
